SERVER-13750 prevent invariant failure when ConvertToCappeding a nonexistent collection